@@ -19,6 +19,56 @@
     {% block branding_favicon %}{% endblock %}
 </head>
 <body id="wagtail" class="{% block bodyclass %}{% endblock %} {% if messages %}has-messages{% endif %} focus-outline-on">
+    <div data-sprite></div>
+    <script>
+        function loadIconSprite() {
+            var spriteURL = '{% url "wagtailadmin_sprite" %}';
+            var revisionKey = 'wagtail:spriteRevision';
+            var dataKey = 'wagtail:spriteData';
+            var isLocalStorage = 'localStorage' in window && typeof window.localStorage !== 'undefined';
+
+            var insertIt = function (data) {
+                var spriteContainer = document.body.querySelector('[data-sprite]');
+                spriteContainer.innerHTML = data;
+            }
+
+            var insert = function (data) {
+                if (document.body) {
+                    insertIt(data)
+                } else {
+                    document.addEventListener('DOMContentLoaded', insertIt.bind(null, data));
+                }
+            }
+
+            if (isLocalStorage && localStorage.getItem(revisionKey) === spriteURL) {
+                var data = localStorage.getItem(dataKey);
+                if (data) {
+                    insert(data);
+                    return true;
+                }
+            }
+
+            try {
+                var request = new XMLHttpRequest();
+                request.open('GET', spriteURL, true);
+                request.onload = function () {
+                    if (request.status >= 200 && request.status < 400) {
+                        data = request.responseText;
+                        insert(data);
+                        if (isLocalStorage) {
+                            localStorage.setItem(dataKey, data);
+                            localStorage.setItem(revisionKey, spriteURL);
+                        }
+                    }
+                }
+                request.send();
+            } catch (e) {
+                console.error(e);
+            }
+        }
+        loadIconSprite();
+    </script>
+
     <!--[if lt IE 9]>
         <p class="capabilitymessage">{% blocktrans %}You are using an <strong>outdated</strong> browser not supported by this software. Please <a href="https://browsehappy.com/">upgrade your browser</a>.{% endblocktrans %}</p>
     <![endif]-->
@@ -28,8 +78,6 @@
             Here are the <a href="https://www.enable-javascript.com/" target="_blank" rel="noopener noreferrer">instructions how to enable JavaScript in your web browser</a>.
         {% endblocktrans %}
     </noscript>
-
-    {% icons %}
 
     {% block js %}{% endblock %}
 
